# geist

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  Cargo.toml  default.nix
.github/workflows/: build.yaml
client/: Cargo.toml
client/src/: config.rs  main.rs
docs/: user-social-login-plan.md
sdk/: Cargo.toml  buf.yaml  build.rs
sdk/proto/geist/meta/v1alpha/: feed.proto  group.proto  identity.proto  role.proto  user.proto
sdk/proto/geist/rpc/: pagination.proto  visibility.proto
sdk/proto/iam/v1alpha/: role.proto  user.proto
sdk/proto/meta/v1alpha/: info.proto  role.proto  user.proto
sdk/proto/rpc/: pagination.proto  visibility.proto
sdk/src/: lib.rs
server/: Cargo.toml
server/migrations/: 20250924021047_extensions.down.sql  20250924021047_extensions.up.sql  20250924021537_feeds.down.sql  20250924021537_feeds.up.sql  20250924022529_groups.down.sql  20250924022529_groups.up.sql  20250924022645_users.down.sql  20250924022645_users.up.sql  20250925000000_user_identities.down.sql  20250925000000_user_identities.up.sql
server/src/: config.rs  lib.rs  main.rs  mod.rs
server/src/iam/: role.rs  user.rs
server/src/meta/: feed.rs  group.rs  identity.rs  info.rs  mod.rs  role.rs  user.rs
