[package]
authors = ["John Bellone <me@jbellone.dev>"]
name = "geist-client"
version = "0.1.0"
edition = "2021"
resolver = "2"
readme = "README.md"
homepage = "https://github.com/johnbellone/geist/client"
repository = "https://github.com/johnbellone/geist/client"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1.0"
jwt = "0.16.0"
log = "0.4.29"
prost = "^0.14"
prost-types = "^0.14"
tokio = { version = "^1.46", features = ["full", "tracing"] }
tokio-stream = "^0.1.18"
tonic = { version = "^0.14", features = ["gzip"] }
tonic-prost = "^0.14"
tracing = { version = "0.1.43", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
uuid = { version = "^1.19", features = ["v7"] }

geist-sdk = { path = "../sdk", version = "0.1.0" }
clap = { version = "4.5.53", default-features = false, features = ["derive", "cargo", "env", "help", "usage", "error-context", "std"] }
color-eyre = "0.6.5"
dotenvy = { version = "^0.15", features = ["clap"] }
