[package]
name = "geist-sdk"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["John Bellone <me@jbellone.dev>"]
repository = "https://github.com/johnbellone/geist/sdk"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
humantime = "2.1.0"
jwt = "0.16.0"
log = { version = "0.4.21", features = ["max_level_debug"] }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tonic = { version = "0.11.0", features = ["tls", "gzip"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "max_level_debug"] }
uuid = { version = "1.8.0", features = ["v7"] }

[build-dependencies]
tonic-buf-build = "0.2.0"
tonic-build = "0.11.0"
