[package]
name = "geist-server"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["John Bellone <me@jbellone.dev>"]
repository = "https://github.com/johnbellone/geist/server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iam-service"
path = "src/bin/iam.rs"
doc = false

[[bin]]
name = "meta-service"
path = "src/bin/meta.rs"
doc = false

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "env", "string"] }
dotenvy = "0.15.7"
humantime = "2.1.0"
jwt = "0.16.0"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tonic = { version = "0.11.0", features = ["tls", "gzip"] }
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
tracing = { version = "0.1.40", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
uuid = { version = "1.8.0", features = ["v7"] }

geist-sdk = { path = "../sdk", version = "0.1.0" }
prost = "0.12.6"
prost-types = "0.12.6"
