[package]
authors = ["John Bellone <me@jbellone.dev>"]
name = "geist-server"
version = "0.1.0"
edition = "2021"
resolver = "2"
readme = "README.md"
homepage = "https://github.com/johnbellone/geist/server"
repository = "https://github.com/johnbellone/geist/server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.53", default-features = false, features = ["derive", "cargo", "env", "help", "usage", "error-context", "std"] }
dotenvy = { version = "^0.15", features = ["clap"] }
humantime = "2.1.0"
jwt = "0.16.0"
log = "0.4.29"
metrics = "^0.24"
metrics-exporter-prometheus = "0.18.1"
prost = "^0.14"
prost-types = "^0.14"
serde_json = "1.0"
sqlx = { version = "^0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "migrate", "postgres", "macros", "uuid", "chrono", "json", "ipnetwork"] }
tokio = { version = "1.36", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "^0.14", features = ["gzip", "router"] }
tonic-health = "^0.14"
tonic-middleware = "^0.4"
tonic-reflection = "^0.14"
tower = "^0.5"
tracing = { version = "0.1.43", features = ["async-await", "log", "max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["tracing", "tracing-serde", "env-filter", "serde", "serde_json"] }
uuid = { version = "^1.20", features = ["v7"] }

geist-sdk = { path = "../sdk", version = "0.1.0" }
axum = "0.8.7"
axum-health = "0.1.2"
color-eyre = "0.6.5"
